# recsrmesh-cpp

./: CMakeLists.txt  README.md  library.json
include/recsrmesh/: crypto.h  csrmesh.h  masp.h  mcp.h  mcp_crypto.h  mtl.h  protocol.h  types.h
src/: crypto.cpp  csrmesh.cpp  masp.cpp  mcp.cpp  mcp_crypto.cpp  mtl.cpp  protocol.cpp
